# old-cpp

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  Makefile.am  README  README.md  TODO  acinclude.m4  configure.ac  graffle  scratch.py
build-scripts/: create-source-package  save-csp-test  save-refinement-test
cmake/: FindBison.cmake  FindJudy.cmake
cspm/: HST.cabal  Setup.lhs
cspm/qc-tests/HST/CSPM/: Tests.hs
cspm/qc-tests/HST/CSPM/Tests/: Booleans.hs  Generators.hs  Lambdas.hs  Lets.hs  Numbers.hs  Patterns.hs  Sequences.hs  Sets.hs
cspm/src/HST/: CSP0.hs  CSPM.hs
cspm/src/HST/CSP0/: Processes.lhs
cspm/src/HST/CSPM/: Bind.hs  BoundExpressions.hs  Definitions.lhs  Environments.hs  Evaluate.hs  Expressions.hs  Lexer.lhs  Parser.hs  Parser.ly  Patterns.lhs  Sets.lhs  Tool.lhs  Types.hs  Utils.hs  Values.hs
cspm/src/HST/CSPM/Tool/: Command.lhs  Compile.lhs  Evaluate.lhs
cspm/tests/: functions.sh  quickcheck-tests.sh  run-tests.sh
cspm/tests/HST/CSPM/: Tests.hs
cspm/tests/HST/CSPM/Tests/: Booleans.hs  Environments.hs  Generators.hs  Lambdas.hs  Lets.hs  Numbers.hs  Sequences.hs  Sets.hs
cspm/tests/expressions/: test-booleans.sh  test-dots.sh  test-lambdas.sh  test-numbers.sh  test-patterns.sh  test-sequences.sh  test-sets.sh  test-types.sh
cspm/tests/mechanics/: test-comments.sh
cspm/tests/processes/: test-aparallel.sh  test-bugs.sh  test-channels.sh  test-extchoice.sh  test-hide.sh  test-intchoice.sh  test-interleave.sh  test-iparallel.sh  test-prefix.sh  test-rextchoice.sh  test-seqcomp.sh  test-timeout.sh
doc/: CMakeLists.txt  callouts.xsl  csp0.1.md  csp0.1.txt  csp0.md  csp0.txt  hst.css  tech-overview.md  tech-overview.txt
doc/releases/: highlights-1.0-α1.txt  highlights-1.0-α2.txt  highlights-1.0-α3.txt  highlights-1.0-α4.txt  shortlog-1.0-α1.txt  shortlog-1.0-α2.txt  shortlog-1.0-α3.txt  shortlog-1.0-α4.txt
include/hst/: CMakeLists.txt  assertions.hh  csp-macros.hh  csp.hh  equivalence.hh  event-stateset-map.hh  eventmap.hh  intset.hh  intsetset.hh  io-macros.hh  io.hh  lts.hh  normalized-lts.hh  proxy-iterator.hh  state-stateset-map.hh  types.hh  zobrist.hh
include/hst/parser/: scanner.hh
libs/: VERSIONS
libs/judyhash/src_lib/: CMakeLists.txt
packaging/mac/: .gitignore  Info.plist  create-pkg.sh
src/: CMakeLists.txt  csp-basic.cc  csp-extchoice.cc  csp-hide.cc  csp-intchoice.cc  csp-interface-parallel.cc  csp-interleave.cc  csp-interrupt.cc  csp-naught.cc  csp-prefix.cc  csp-rename.cc  csp-seqcomp.cc  dirstamp  equivalence.cc  event-stateset-map.cc  eventmap.cc  intset.cc  intsetset.cc  io-basic.cc  lts.cc  state-stateset-map.cc  zobrist.cc
src/assertions/: refine.cc
src/normalization/: bisimulate.cc  closure.cc  divergent.cc  normalize.cc  normalized-lts.cc  prenormalize.cc
src/operators/: alphabetized-parallel.cc  extchoice.cc  hide.cc  intchoice.cc  interface-parallel.cc  interleave.cc  interrupt.cc  prefix.cc  rename.cc  replicated-extchoice.cc  replicated-intchoice.cc  seqcomp.cc  timeout.cc
src/parser/: csp0.yy  eventmap.yy  intset.yy  intsetset.yy  lts.yy  scanner.cc
test/: .gitignore
test/csp/: .gitignore  00-aparallel1.csp0  00-aparallel2.output  00-aparallel3.output  00-extchoice1.output  00-extchoice2.csp0  00-extchoice2.output  00-extchoice3.csp0  00-extchoice3.output  00-intchoice1.csp0  00-intchoice1.output  00-intchoice2.output  00-interleave1.output  00-interleave2.output  00-interleave3.csp0  00-interleave3.output  csp-tests  (+14 more)
tests/: CMakeLists.txt
tests/bisimulate/: 00-extchoice4.input  00-extchoice4.output  CMakeLists.txt  test-bisimulate.cc
tests/csp/: 00-aparallel1.csp0  00-aparallel1.f-prenormal-output  00-aparallel1.normal-output  00-aparallel2.csp0  00-aparallel2.output  00-aparallel2.t-prenormal-output  00-aparallel3.csp0  00-aparallel3.f-normal-output  00-aparallel3.normal-output  00-aparallel3.output  00-aparallel3.prenormal-output  00-extchoice1.csp0  00-extchoice1.normal-output  00-extchoice1.output  00-extchoice1.t-prenormal-output  00-extchoice2.csp0  00-extchoice2.f-prenormal-output  00-extchoice2.normal-output  00-extchoice2.output  00-extchoice2.t-normal-output  00-extchoice3.csp0  00-extchoice3.output  00-extchoice3.prenormal-output  00-extchoice4.csp0  00-extchoice4.f-prenormal-output  00-extchoice4.normal-output  00-extchoice4.output  00-hide1.csp0  00-hide1.f-normal-output  00-hide1.normal-output  00-hide1.output  00-hide1.t-prenormal-output  00-hide2.csp0  00-hide2.f-prenormal-output  00-hide2.output  00-hide2.prenormal-output  00-hide2.t-prenormal-output  00-hide3.csp0  00-hide3.f-normal-output  00-hide3.output  (+291 more)
tests/divergence/: CMakeLists.txt  test-divergence.cc  test01.input  test01.output
tests/equivalences/: CMakeLists.txt  test-equivalences.cc  test01.input  test01.output  test02.input  test02.output  test03.input  test03.output  test04.input  test05.input
tests/eventmap/: CMakeLists.txt  functional.input  functional.output  map-tests  not-functional.input  test-all-eventmap-pairs.sh  test-eventmap-count.cc  test-eventmap-pairs.cc
tests/intset/: CMakeLists.txt  test-all-difference.sh  test-all-intersection.sh  test-all-overlap.sh  test-difference.cc  test-intersection.cc  test-intset.cc  test-overlap.cc  test-superset.cc  test-union.cc  test01.input  test01.output  test01.overlap-input  test01.superset-input
tests/intsetset/: CMakeLists.txt  test-all-intersection.sh  test-all-overlap.sh  test-difference.cc  test-intersection.cc  test-intsetset.cc  test-overlap.cc  test-union.cc  test01.diff-input  test01.input  test01.output  test01.union-input
tests/lts/: CMakeLists.txt  cycle.lts  cycle.output  empty-graph.output  one-edge.lts  one-edge.output  test-all-lts.sh  test-lts.cc
tests/refinement/: 00-basic1.csp0  00-basic2.csp0  00-basic3.csp0  00-basic4.csp0  00-basic4.failures  00-basic5.csp0  00-basic6.csp0  00-basic6.failures  80-roscoe-p40-a.csp0  80-roscoe-p40-b.csp0  80-roscoe-p52-a.csp0  80-roscoe-p52-b.csp0  CMakeLists.txt  bugs-9-superset.csp0  bugs-9-superset.failures  bugs-9-superset.traces  test-failures-refinement.cc  test-traces-refinement.cc
(+38 files in other folders)
