Name:            HST
Version:         1.0-a3
Cabal-Version:   >= 1.2
Build-Type:      Simple
License:         LGPL
License-File:    LICENSE
Author:          Douglas Creager

Library
  HS-Source-Dirs:   src, tests
  Build-Depends:    base, haskell98, containers, mtl,
                    QuickCheck >= 1.1
  Exposed-Modules:  HST.CSP0, HST.CSPM
  Other-Modules:    HST.CSP0.Processes,
                    HST.CSPM.Bind,
                    HST.CSPM.Environments,
                    HST.CSPM.Evaluate,
                    HST.CSPM.Sets,
                    HST.CSPM.Types

Executable tests
  HS-Source-Dirs:   src, tests
  Main-Is:          HST/CSPM/Tests.hs
